<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">XERUNG</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_change_number">Change Number</string>
    <string name="action_logout">Logout</string>
    <string name="action_myprofile">Profile</string>
    <string name="action_group_create">Create Directory</string>
    <string name="action_add_contacts">Add Contacts</string>
    <string name="search_by_name">Search by name</string>
    <string name="add_any_member">You can add any number of contacts</string>
    <string name="no_result_found">No result found.</string>
    <string name="create">Create</string>
    <string name="city_name">City name</string>
    <string name="blood_group_name">Blood Group</string>
    <string name="provide_photo">Please provide directory name and directory icon</string>
    <string name="you_can_add">You can add contacts from here</string>
    <string name="action_group_notification">Notification</string>
    <string name="action_group_search">Search Directories</string>
    <string name="action_group_sync">Sync</string>
    <string name="crop__saving">Saving picture…</string>
    <string name="add">Add</string>
    <string name="crop__wait">Please wait…</string>
    <string name="crop__pick_error">No image sources available</string>
    <string name="crop__done">DONE</string>
    <string name="crop__cancel">CANCEL</string>
    <string name="action_select">Pick</string>
    <string name="copyright">Copyright © 2017 MITYUNG.All Rights Reserved.</string>
    <string name="msg_enter_mobile">Enter your mobile number to get started.</string>
    <string name="lbl_name">Full Name</string>
    <string name="lbl_email">Email</string>
    <string name="lbl_mobile">Mobile</string>
    <string name="lbl_alternate_mobile">Alternate Mobile</string>
    <string name="lbl_profession">Profession</string>
    <string name="lbl_company">Company</string>
    <string name="lbl_address">Address</string>
    <string name="lbl_city">City</string>
    <string name="lbl_state">State</string>
    <string name="lbl_country">Country</string>
    <string name="lbl_next">NEXT</string>
    <string name="msg_sit_back">Sit back &amp; Relax! while we verify your mobile number</string>
    <string name="msg_manual_otp">(Enter the OTP below in case if we fail to detect the SMS automatically)</string>
    <string name="lbl_enter_otp">Enter OTP</string>
    <string name="lbl_submit">SUBMIT</string>
    <string name="validate_otp">Trying to auto detect OTP sent via SMS</string>
    <string name="enter_otp">Enter OTP sent via SMS</string>
    <string name="otp">OTP</string>
    <string name="create_account">Create Account</string>
    <string name="i_agree">I agree to MITYUNG\'s Terms and Conditions.</string>
    <string name="are_you_sure_you_want">Do you really want to log out ?</string>
    <string name="network_problem_head">Network problem</string>
    <string name="network_problem">Network problem.Please try again later.</string>
    <string name="no_internet_connection">No internet connection.</string>
    <string name="you_dont_have_internet">You don\'t have internet connection. Please connect with internet and try again.</string>
    <string name="cant_connect">Can\'t Connect</string>
    <string name="cant_connect_please_check">Please check your network connection.</string>
    <string name="group_already_exist_head">Error</string>
    <string name="group_already_exist_msg_head">Message</string>
    <string name="group_already_exist_msg">Directory profile has been updated successfully.</string>
    <string name="profile_updated_msg">User profile has been updated successfully.</string>
    <string name="profile_updated_msg_photo">User profile updated successfully.</string>
    <string name="group_already_exist">Directory already exist.Please choose a different one.</string>
    <string name="group_already_exist_error">Directory creation failed.</string>
    <!-- Typeface names -->
    <string name="typeface_roboto_regular">Roboto-Regular</string>
    <string name="typeface_roboto_regular_thin">Roboto-ThinItalic</string>
    <string name="typeface_android">android</string>
    <string name="failed_to_update">Failed to update directory info</string>
    <string name="request_received_note">Do you want to add yourself in directory known as </string>
    <string name="request_received_note_user">Do you want to add yourself in directory known as </string>
    <string name="request_received">Request received</string>
    <string name="something_problem">Something went wrong.Please try again later.</string>
    <string name="no_request_pending">No pending request</string>
    <string name="add_group_name">Name of the directory</string>
    <string name="add_tag_line">What are members of this private directory called?</string>
    <string name="add_tag_example">Ex: Rajputs, Indians, IITians, Doctors, Aggarwals</string>
    <string name="add_group_about">About directory</string>
    <string name="verify_otp"> is your verification code for Xerung.</string>
    <string name="account_email_exist">Your email id is already registered with us.Please login with your mobile number.</string>

    <string name="type_for_user_name">Search directories.</string>
    <string name="no_record_found">No record found.</string>
    <string name="send_request">Send request</string>
    <string name="sen_request_to_admin">Join directory( ) by sending request to admin.</string>
    <string name="choose_country">Choose country</string>
    <string name="title_activity_show_contacts">Show Contacts</string>
    <string name="title_directory_settings">Directory Settings</string>
    <string name="update">Update</string>
    <string name="search_member">Search member</string>

    <!--Listview-->
    <string name="xlistview_header_hint_normal">Drop-down refresh</string>
    <string name="xlistview_header_hint_ready">Refresh</string>
    <string name="xlistview_header_hint_loading">loading...</string>
    <string name="xlistview_header_last_time">Last updated：</string>
    <string name="xlistview_footer_hint_normal">Load more</string>
    <string name="xlistview_footer_hint_ready">Load more</string>
    <string name="profile_update">Profile Update</string>
    <string name="profile_update_msg">Please update your profile for more features.</string>
    <string name="pending_request">Pending Request</string>
    <string name="no_pending_request">No Pending Request.</string>
    <string name="pending_members">Pending Members</string>
    <string name="no_pending_members">No pending members.</string>

    <!-- Toolbar titles -->
    <string name="toolbar_title_dashboard">Dashboard</string>
    <string name="toolbar_title_explore">Explore</string>
    <string name="other_activity">Other Activity</string>

    <!-- Navigation Drawer -->
    <string name="nav_drawer_item_dashboard">Home</string>
    <string name="nav_drawer_item_explore">Explore</string>
    <string name="nav_drawer_help_and_feedback"><![CDATA[Help & feedback]]></string>
    <string name="nav_drawer_about">About</string>
    <string name="navigation_drawer_opened">The navigation drawer is opened</string>
    <string name="navigation_drawer_closed">The navigation drawer is closed</string>
    <string name="tag_nav_drawer_main_entry">nav_drawer_main_entry</string>
    <string name="tag_nav_drawer_special_entry">nav_drawer_special_entry</string>
    <string name="tools_text_account_information_username">Username</string>
    <string name="tools_text_account_information_email">user@mail.com</string>

    <string name="please_wait">Please wait...</string>

</resources>