<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@color/theme_primary"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <RelativeLayout
                android:id="@+id/layBack"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:padding="10dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:background="@drawable/ic_action_arrow_left" />
            </RelativeLayout>

            <TextView
                android:id="@+id/txtHead"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="20dp"
                android:scrollHorizontally="true"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/action_group_create"
                android:textColor="@color/white"
                android:textSize="@dimen/basic20" />
        </LinearLayout>

        <TextView
            android:id="@+id/btnDone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_gravity="center_vertical"
            android:layout_margin="5dp"
            android:drawableLeft="@drawable/ic_action_tick_48"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/add"
            android:textColor="@color/white"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="5dp">

        <com.example.contactplusgroup.edittext.MaterialEditText
            android:id="@+id/edtContactSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:hint="@string/search_by_name"
            android:imeOptions="actionNext"
            android:inputType="textPersonName"
            android:textCursorDrawable="@drawable/text_cursor_white"
            android:textSize="16sp"
            app:met_baseColor="@color/green"
            app:met_floatingLabel="highlight"
            app:met_floatingLabelTextColor="@color/grey_800"
            app:met_helperTextColor="@color/grey_400"
            app:met_primaryColor="@color/green"
            app:met_singleLineEllipsis="true"
            app:met_textColor="@color/grey_800"
            app:met_textColorHint="@color/grey_400"
            app:met_underlineColor="@color/grey_400" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/add_any_member"
            android:textColor="#212121"
            android:textSize="13sp" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:orientation="vertical" >

            <ListView
                android:id="@+id/lvContactListSearch"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:cacheColorHint="@android:color/transparent"
                android:divider="@drawable/list_divider"
                android:dividerHeight="0.5dp"
                android:fadingEdge="none"
                android:listSelector="@android:color/transparent"
                android:scrollbars="none" >
            </ListView>

            <TextView
                android:id="@+id/txtNoSearchresult"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:gravity="center"
                android:text="@string/no_result_found"
                android:textColor="#212121"
                android:textSize="14sp"
                android:visibility="gone" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>