<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@color/theme_primary"
        android:orientation="horizontal">

        <RelativeLayout
            android:id="@+id/layBack"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="@drawable/main_hover"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@drawable/ic_action_arrow_left" />
        </RelativeLayout>

        <TextView
            android:id="@+id/txtHead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="20dp"
            android:text="@string/action_group_notification"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/layProgressresult"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_margin="5dp"
            android:orientation="horizontal"
            android:padding="10dp">

            <com.example.contactplusgroup.views.ProgressBarCircularIndeterminate
                android:id="@+id/progressBar1"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_centerInParent="true"
                android:layout_margin="5dp"
                android:background="@color/green_3" />

            <TextView
                android:id="@+id/txtpleasewait"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="15dp"
                android:text="@string/please_wait"
                android:textColor="@color/grey_700"
                android:textSize="16sp" />
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layinternetresult"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="5dp"
        android:visibility="gone" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/txtcantConnect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:drawableTop="@drawable/ic_no_internett_connection"
                android:gravity="center"
                android:text="@string/no_internet_connection"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txtcantConnectNote"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginTop="3dp"
                android:gravity="center"
                android:text="@string/cant_connect_please_check"
                android:textColor="@color/grey_700"
                android:textSize="13sp" />
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layNoresultserver"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="5dp"
        android:visibility="gone">

        <TextView
            android:id="@+id/txtNoresultnetwork"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:drawableTop="@drawable/ic_network_prblm_large"
            android:text="@string/network_problem"
            android:textColor="@color/grey_600"
            android:textSize="18sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layNorecord"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="5dp"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtNoPendingRequest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:drawableTop="@drawable/ic_notification_large"
                android:gravity="center"
                android:text="@string/no_request_pending"
                android:textColor="@color/grey_600"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txtNoPendingRequest1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginTop="3dp"
                android:gravity="center"
                android:text="You don't have any pending requests."
                android:textColor="@color/disabled_color"
                android:textSize="13sp" />

        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/layMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="vertical">

        <ListView
            android:id="@+id/lvList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:cacheColorHint="@android:color/transparent"
            android:divider="@android:color/transparent"
            android:dividerHeight="1dp"
            android:fadingEdge="none"
            android:listSelector="@android:color/transparent"
            android:scrollbars="none"></ListView>
    </LinearLayout>

</LinearLayout>